--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "bootstrap": "^5.1.1",
-    "bootstrap-icons": "^1.5.0",
-    "vue": "^2.6.14"
+    "bootstrap-icons": "^1.5.0"
   }
 }
